--- a/src/App.scss
+++ b/src/App.scss
@@ -25,7 +25,11 @@
       flex-direction: column;
       align-items: center;
       justify-content: center;
-  
+
+      @media screen and (max-width: 720px) {
+        width: 90%;
+      }
+ 
       #text {
         margin-bottom: 10px;
       }
@@ -43,6 +47,11 @@
         width: 95%;
         margin: 10px;
 
+        @media screen and (max-width: 375px) {
+          display: flex;
+          flex-direction: column-reverse;
+        }    
+
         #new-quote {
           background-color: rgb(255, 255, 255);
           border-radius: 3px;
@@ -54,7 +63,13 @@
           font-size: 15px;
           align-self: flex-end;
           cursor: pointer;
-        }
+
+          @media screen and (max-width: 375px) {
+            width: 60%;
+            margin-bottom: 5px;
+            align-self: center;
+          }
+        }        
 
         #new-quote:hover {
           color: lightgrey;
@@ -69,6 +84,11 @@
           width: 50px;
           text-decoration: none;
           border-radius: 5px;
+
+          @media screen and (max-width: 375px) {
+            align-self: center;
+            width: 60%;
+          }
         }
         
         #tweet-quote:hover {
