--- a/src/App.scss
+++ b/src/App.scss
@@ -36,6 +36,7 @@
       flex-direction: column;
       align-items: center;
       justify-content: center;
+      box-shadow: 0px 0px 10px 0.5px black;
 
       @media screen and (max-width: 720px) {
         width: 90%;
@@ -52,7 +53,7 @@
         margin-bottom: 15px;
         align-self: flex-end;
       }
-      
+
       .inferiorBar {
         display: flex;
         flex-direction: row;
@@ -85,7 +86,7 @@
         }        
 
         #new-quote:hover {
-          color: lightgrey;
+          transform: scale(1.12);          
         }
 
         #tweet-quote {
@@ -105,8 +106,7 @@
         }
         
         #tweet-quote:hover {
-          color: lightgrey;
-
+          transform: scale(1.12);          
         };
         
         #tweet-quote:active {
