--- a/src/App.scss
+++ b/src/App.scss
@@ -77,7 +77,7 @@
           font-size: 15px;
           align-self: flex-end;
           cursor: pointer;
-
+      
           @media screen and (max-width: 375px) {
             width: 60%;
             margin-bottom: 5px;
@@ -87,6 +87,11 @@
 
         #new-quote:hover {
           transform: scale(1.12);          
+        }
+
+        #new-quote:active {
+          transform: scale(0.80);
+          transition: transform 0.2s;
         }
 
         #tweet-quote {
@@ -110,7 +115,8 @@
         };
         
         #tweet-quote:active {
-          color: white
+          transform: scale(0.8);
+          transition: transform 0.2s;
         }
       }
     }
